--- a/css/autocomplete-custom.css
+++ b/css/autocomplete-custom.css
@@ -1,29 +1,27 @@
-html, body{
-  font-family: "Arial";
+#buscaTopo{
+  margin: 0;
 }
-
-#autocomplete{
-  width: 250px;
-}
-
 .autocomplete-custom{
   min-width: 200px;
   display: block;
 }
 .autocomplete-custom input{
-  width: 100%;
+  width: 100%; height: 30px;
+  margin: 0px;
 }
 .autocomplete-custom .box-result{
-  width: 100%; min-height: 150px;
+  width: 100%; 
   position: relative;
-  display: none;
+   display: block; 
   z-index: 1000;
+  float: left;
 }
 .autocomplete-custom .box-result .box-line{
   width: 100%; 
   border-bottom: 1px solid #dddddd; 
   border-left: 1px solid #dddddd; 
   border-right: 1px solid #dddddd; 
+  background-color: #fff;
   float: left;
 }
 .autocomplete-custom .box-result .box-line:hover{
