--- a/autocomplete-custom/css/autocomplete-custom.css
+++ b/autocomplete-custom/css/autocomplete-custom.css
@@ -4,17 +4,18 @@
 .autocomplete-custom{
   min-width: 200px;
   display: block;
+  position: absolute;
 }
 .autocomplete-custom input{
   width: 100%; height: 30px;
   margin: 0px;
 }
 .autocomplete-custom .box-result{
-  width: 100%; 
-  position: relative;
-  display: block; 
+  width: 100%;
+  position: absolute;
+  display: block;
   z-index: 1000;
-  /*float: left;*/
+  top: 35px;
 }
 .autocomplete-custom .box-result .box-line{
   width: 100%; 
